2009-07-08  Steve Langasek <vorlon@debian.org>
	* server/main.c: If no game file is specified and there are more
	than 4 players, use the 5/6 player board by default.

2008-06-27  Bas Wijnen <shevek@fmf.nl>
	* docs/pioneers-editor.6, docs/Makefile.am: Add manual page for
	pioneers-editor.

2008-05-04  Roland Clobus <rclobus@bigfoot.com>
	* docs/pioneers-server-gtk.6, docs/pioneers-server-console.6,
	server/gtk/main.c, server/server.c, server/server.h, server/main.c,
	client/help/C/pioneers.xml: Use less memory for server-console. Add
	support for games in $XDG_DATA_HOME/pioneers.

2008-05-01  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.12.3

2008-05-01  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.12.2

2008-05-01  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c: The tournament minute has 60 seconds again, instead
	of only one. (Fix for 2008-03-24)
	* client/common/callback.c: Client send rejected quote again. (Fix for
	2008-04-23)
	* NEWS: Release notes for 0.12.2
	* client/ai/lobbybot.c: Mention 0.12.2

2008-04-27  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Work version is 0.12.2

2008-04-27  Roland Clobus <rclobus@bigfoot.com>
	* Released version 0.12.1

2008-04-27  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c, server/server.h: Added version 0.12.
	* client/gtk/data/splash.svg: Version 0.12.
	* docs/README.release: Added note for protocol changes.
	* configure.ac, README.subversion: Fix for previous change, the
	options are now 'IPv4' and 'unspecified'. IPv6 does not work, the name
	'localhost' is not a IPv6 name.
	* common/network.c: Remove debug code from previous commit.
	* NEWS: Release notes for 0.12.1
	* docs/README.release: Updated the release notes
	* client/ai/lobbybot.c: Mention 0.12.1

2008-04-23  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, README.subversion, common/network.c: Specify IPv4 or
	IPv6 for sockets.