@@ -1,3 +1,7 @@
+2009-08-27  Roland <rclobus@bigfoot.com>
+	* client/gtk/gui.c, client/gtk/legend.c: Show legend dialog without
+	scrollbars when it is shown as a separate window.
+
 2009-07-08  Steve Langasek <vorlon@debian.org>
 	* server/main.c: If no game file is specified and there are more
 	than 4 players, use the 5/6 player board by default.
